--- a/AnalisisAvzdo/C0.3_AbrahamRodriguez_Zepelin.md
+++ b/AnalisisAvzdo/C0.3_AbrahamRodriguez_Zepelin.md
@@ -40,7 +40,7 @@ ___
 
 2. Coloque el diagrama elaborado dentro de este apartado.
 
-
+![DiagramadeFlujo](../images/diagramadeflujo.drawio.png)
 ___
 
 ### :bomb: Rubrica
