--- a/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
+++ b/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
@@ -49,7 +49,7 @@ ___
     R: Java y arduino.
 
   - Elabore un ilustración que apoye a explicar un mapa de ruta a seguir para crear una arquitectura para un sistema embebido
-    R:
+    R: ![DiagramadeFlujo](../images/ArquitecturaSistemaEmbedido.drawio.png)
 
 - **Sistema de adquisición de datos**:
 
