--- a/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
+++ b/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
@@ -85,4 +85,4 @@ ___
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
    
-:house: [Ir a inicio](../docs/D0.1_Introduccion_IngenieriaSoftware.md)
+:house: [Ir a mi repositorio GitHub](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez.git)
