--- a/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
+++ b/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
@@ -53,8 +53,11 @@ ___
 
 - **Sistema de adquisición de datos**:
 
-  - Definición de un sistema de adquisición de datos
-  - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema de adquisición de datos
+  - Definición de un sistema de adquisición de datos. R: Una base de datos embebida es un sistema de gestión de bases de datos (SGBD) que está integrado con la aplicación software que requiere acceso a los datos almacenados, de tal forma que la base de datos está oculta de la aplicación de usuario final y requiere poco o ningún mantenimiento.
+  - 
+  - Tipo de tecnologías que se pueden involucrar para desarrollar un sistema de adquisición de datos. R:SQLite, SQLserver, firebird Embedded,
+    Mongo DS.
+
   - Elabore un ilustración que apoye a explicar un mapa de ruta a seguir para crear una arquitectura para un sistema de adquisición de datos.
 
 - **Caso de éxito**
