--- a/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
+++ b/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
@@ -75,10 +75,9 @@ ___
     encargado para su respectivo analisis.
 
 1. Coloque aquí la ilustración elaborada para el **sistema embebido**
-![DiagramadeFlujo](../images/SistemaEmbedido.drawio.png)
-
+   ![DiagramadeFlujo](../images/ArquitecturaSistemaEmbedido.drawio.png)
 2. Coloque aquí la ilustración elaborada para el **sistema de adquisición de datos**
-
+![DiagramadeFlujo](../images/SistemaEmbedido.drawio.png)
 ___
 
 ### :bomb: Rubrica
