--- a/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
+++ b/AnalisisAvzdo/C0.4_RodriguezMenaAbraham_Zepelin.md
@@ -87,5 +87,5 @@ ___
 | Instrucciones | Se cumple con cada uno de los puntos indicados dentro del apartado Instrucciones?            | 20 |
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
-   
-:house: [Ir a mi repositorio GitHub](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez.git)
+### REPOSITORIO: 
+https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez.git
