--- a/AnalisisAvzdo/C1.1_AbrahamRodriguezMena_Zepelin.md
+++ b/AnalisisAvzdo/C1.1_AbrahamRodriguezMena_Zepelin.md
@@ -35,15 +35,15 @@ ___
 
 1. Especifique el  **Objetivo general** del caso de estudio, recordándose que se debe indicar lo que se busca con el proyecto.
 
-- Que los clientes encuentren en open warehouse company mayores niveles de seguridad y control a travez de procesos digitalizados.
+- Que los clientes encuentren en open warehouse company mayores niveles de seguridad y control a travez de procesos digitalizados esperando un aumento de 20% en clientes y companias interesadas en los nuevos servicios a ofrecer.
 
 2. Especifique tres **objetivos específicos**, recordándose que deben ser medibles, cuantificables y logrables.
 
-- Ampliar el mercado de open warehouse comapany para estar a la par o por encima de sus competidores directos.
-- Proveer nuevos servicios que lo hagan disitno a la compañia.
-- Implemetar con exito un nuevo modelo de negocios donde se incluira ofrecer una plataforma de monitoreo y control en timepo real.
+- Tener hasta un 80% de el control de todos los eventos ya que las inspecciones se realizaran automaticamente cada ciertos minutos.
+- Agilizar los procesos de documentacion hasta un 50% digitalizandolos y eliminando los documentos en papel.
+- Reducir un 20% costos relacionados al personal operativo automatizando la documentacion de los reportes manuales a digitales.
 
-3. Coloque aqui el diagrama del **modelo del negocio** que se visualiza para el caso de estudio.
+1. Coloque aqui el diagrama del **modelo del negocio** que se visualiza para el caso de estudio.
 
 - ![Modelo de Negocios](../images/mod.drawio.svg)
 
