--- a/AnalisisAvzdo/C1.3_AbrahamRodriguezMena_Zeppelin.md
+++ b/AnalisisAvzdo/C1.3_AbrahamRodriguezMena_Zeppelin.md
@@ -57,4 +57,4 @@ RSI-03|Requerimiento de Desiciones|Como Usuario Dueño deseo que se realice una 
 RSI-04|Requerimiento de Dispositivos|Como usuario Supervisor de monitoreo tengo que contar con un sistema de hardware (Computadora) capaz veloz y eficaz para poder llevar una buena y fluida administración de  los datos y con ello poder tomar decisiones de forma inmediata, así como también un sistema sensorial que capture información de manera constante y que sea resistente a diferentes cambios climáticos.
 RSI-05|Requerimiento de Software|Como Usuario Supervisor del sistema requiero un software que sea de fácil entendimiento, que su interfaz gráfica tenga una organización, que cuente con todas las herramientas necesarias administrar la información y que sea un software que esté protegido.
 
-:house: [Enlace a mi GitHub](https://github.com/OscarAbrahamH/AnalisisAvanzado_Desarrollo/blob/master/AbrahamHDocs/blog/C1.3_OscarHuerta_Zeppelin.md)
+:house: [Enlace a mi GitHub](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez)
