--- a/AnalisisAvzdo/C1.3_AbrahamRodriguezMena_Zeppelin.md
+++ b/AnalisisAvzdo/C1.3_AbrahamRodriguezMena_Zeppelin.md
@@ -41,7 +41,7 @@ RUS-02|Requerimiento de Control de Usuarios|Como Usuario Administrativo deseo qu
 RUS-03|Requerimiento de reporte de Monitoreo y/o Siniestros|Como usuario supervisor de monitoreo requiero un analisis constante de temperatura y humedad de la zona y estos deben generar reportes de cada movimiento asi como tambien tienen que ser almacenados en la base de datos del sistema y deben ser cargados en la nube para asi tener un respaldo de esta información. Y Cuando se observe algún siniestro este debe ser clasificado como “Prioridad” y tiene que estar distinguido con letras de color rojo.
 RUS-04|Requerimiento de Alertas|Como usuario encargado de la seguridad requiero que el sistema cuente con una alerta inmediata en caso de alguna condición ambiental que este fuera de control, este debe enviar un informe del suceso directo a los dispositivos y generar una alerta con sonido muy fuerte para poder asi actuar de forma inmediata.
 RUS-05|Requerimiento de Disponibilidad|Como Usuario Dueño requiero que el sistema esté disponible las 24 horas para mí, para poder así llevar un control, monitoreo y estar informado de cada acontecimiento que suceda en tiempo real.
-RUS-06|Requerimiento de Respaldo|Como usuario dueño del sistema decreto que la información del sistema sea almacenada de forma segura y que se cuente con respaldo en caso de alguna pérdida, esta misma información debe ser guardada de forma local y debe de ser cargada automáticamente a un servidor en la nube.
+RUS-06|Requerimiento de Respaldo|Como usuario dueño del sistema decreto que la información del sistema sea almacenada de forma segura y que se cuente con respaldo en caso de alguna pérdida, esta misma información debe ser guardadac de forma local y debe de ser cargada automáticamente a un servidor en la nube.
 RUS-07|Requerimiento de plataforma|Como usuario Supervisor de monitoreo requiero poder consultar la plataforma desde cualquier dispositivo tanto móviles o computadoras que se encuentren fuera del área de trabajo, para así poder realizar acciones en el sistema y actuar de forma inmediata en dado caso de alguna alerta.
 RUS-08|Requerimiento de dispositivos|Como usuario supervisor requiero ingresar al sistema desde cualquier dispositivo tanto móviles o computadoras.
 RUS-09|Requerimiento de reportes de prioridad|Como usuario supervisor de monitoreo requiero tener un reporte detallado con gráficos de los datos más relevantes (Alertas) que el sistema recaudo durante el tiempo que está en funcionamiento, los informes tienen que ser cargados en la base de datos del sistema y así como también deben ser cargados en la nube del sistema para tener un respaldo de esta información. 
