--- a/AnalisisAvzdo/C2.1_AbrahamRodriguez_Zeppelin.md
+++ b/AnalisisAvzdo/C2.1_AbrahamRodriguez_Zeppelin.md
@@ -61,15 +61,14 @@ Requerimientos funcionales del usuario y del sistema.
 | Identificador |[RF-01  ]|
 | Nombre |Acceso al sistema.|
 | Detalle |Cada Usuario tendra su respectivo ID más su contraseña para accesar al sistema dentro de su respectivo campo y privilegios.  |
-| :triangular_flag_on_post: **Pre-condiciones** | Cuando un nuevo usuario sea agregado se le dará un pequeño tutorial para familiarizarse con la interfaz.|
-|:smile: **Secuencia normal** | Acción |
+| :triangular_flag_on_post: **Pre-condiciones** | El usuario debera accesar al sistema por medio de una red local dentro de la empresa.|
+|:smile: **Secuencia normal** | El usuario deberá teclear su usuario y contraseña para poder accesar al sistema. |
 |Paso 1|Una vez ingresado los datos correctos el usuario recibirá una alerta de bienvenida.  |
 |Paso 2|Una vez ingresado los datos correctos el usuario podrá navegar el sistema sin ningún incomveniente.|
-|Paso 3||
 |:triangular_flag_on_post: **Post-condicion**| Dará acceso imediato al sistema.|
 |:running: Excepciones | Mostrará una alerta en caso de ingresar datos erroneos(Usuario o contraseña), despues de varios intentos bloqueará el acceso al sistema. |
-|Paso 1||
-|Paso 2||
+|Paso 1|El usuario deberá reingresar los datos.|
+|Paso 2|Si el usuario no logra ingresar sus datos de manera correcta, con ayuda del administrador se le asginara una nueva contraseña.|
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
@@ -106,8 +105,8 @@ Requerimientos funcionales del usuario y del sistema.
 | Nombre |Configurar Parametros|
 | Detalle |El adminitrador podra configurar parametros para maximo y minimo control, de acuerdo con lo que necesite el usuario |
 | :triangular_flag_on_post: **Pre-condiciones** |Solo el adminitrador tiene el control de todo|
-|:smile: **Secuencia normal** |Control |
-|Paso 1| El administrador tiene que ver las necesidades del usuario |
+|:smile: **Secuencia normal** |Parametros |
+|Paso 1| El administrador tiene que poner las restricciones al usuario |
 |Paso 2| El administrador tiene que darle permisos al usuario |
 |Paso 3| El administrador tiene que proteger lo que no necesite el usuario |
 |:triangular_flag_on_post: **Post-condicion**| El sistema enviara un mensaje de confirmacion |
@@ -117,18 +116,17 @@ Requerimientos funcionales del usuario y del sistema.
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
-| Identificador |[RF-0  ]|
-| Nombre ||
-| Detalle | |
-| :triangular_flag_on_post: **Pre-condiciones** ||
-|:smile: **Secuencia normal** | |
-|Paso 1|  |
-|Paso 2|  |
-|Paso 3|  |
-|:triangular_flag_on_post: **Post-condicion**|   |
-|:running: Excepciones | |
-|Paso 1||
-|Paso 2||
+| Identificador |[RF-05]|
+| Nombre |[Recoleccion de datos]|
+| Detalle |[El sistema deberá realizar un monitoreo detallado de las diferentes condiciones ambientales tales como son: temperatura y humedad. Así como también debe cubrir el sistema de iluminación capturando información de cualquier detalle de este]|
+| :triangular_flag_on_post: **Pre-condiciones** |El sistema debera ser instalado de forma correcta y contar con todas las especificaciones solicitadas.|
+|:smile: **Secuencia normal** | Para el caso de monitoreo de Humedad,temperatura e iluminacion, se llevara acabo con un sensor que capte cada movimiento de dichos casos. |
+|Paso 1|Si se detecta cambios de temperatura y/o humedad se detectara bajo el sistema sensorial|
+|Paso 2|Si el sistema de ilumacion falla se debera captar de forma inmediata este fallo|
+|Paso 3|Si se detecta algun percance se debera alertar de forma gradual al usuario|
+|:triangular_flag_on_post: **Post-condicion**|Realizar y almacenar un informe detallado de cada movimiento que el sistema detecte|
+|:running: Excepciones | Alertar cualquier anomalia que represente peligro |
+|Paso 1|Si se presenta una situacion abiental de peligro, enviar una alerta de forma inmedianta al usuario|
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
@@ -147,48 +145,41 @@ Requerimientos funcionales del usuario y del sistema.
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
-| Identificador |[RF-0  ]|
-| Nombre ||
-| Detalle | |
-| :triangular_flag_on_post: **Pre-condiciones** ||
-|:smile: **Secuencia normal** | |
-|Paso 1|  |
-|Paso 2|  |
-|Paso 3|  |
-|:triangular_flag_on_post: **Post-condicion**|   |
-|:running: Excepciones | |
-|Paso 1||
-|Paso 2||
+| Identificador |[RF-7  ]|
+| Nombre |Historia condicion dentro del control|
+| Detalle |El sistema debe almacenar valores sensados historicos por hora y valor promedio |
+| :triangular_flag_on_post: **Pre-condiciones** |El sistema ira almacenando los valores en un maximo rango por semana para evitar probelmas de almacenamiento.|
+|:smile: **Secuencia normal** |El sistema tomara los valores en un rango de 6 horas para darnos el promedio que se dio durante ese rango de tiempo. |
+|Paso 1| Una vez echos estos procesos se generará una alerta desplegando el promedio generado en el lapso establecido. |
+|:triangular_flag_on_post: **Post-condicion**|  En caso de no salirse fuera del promedio establecido dentro del sistema seguiera operando de manera normal. |
+|:running: Excepciones |En caso de recibir la alarte del promedio generado. |
+|Paso 1|Se podra solicitar de manera manual el promedio. |
+
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
-| Identificador |[RF-0  ]|
-| Nombre ||
-| Detalle | |
-| :triangular_flag_on_post: **Pre-condiciones** ||
-|:smile: **Secuencia normal** | |
-|Paso 1|  |
-|Paso 2|  |
-|Paso 3|  |
-|:triangular_flag_on_post: **Post-condicion**|   |
-|:running: Excepciones | |
-|Paso 1||
-|Paso 2||
+| Identificador |[RF-8  ]|
+| Nombre |Historial condicion fuera de control|
+| Detalle |El sistema deberá informar cuando se presente alguna anomalia que sea detectada por los sensores de temperatura. |
+| :triangular_flag_on_post: **Pre-condiciones** |Mientras no exista ninguna anomalia el sistema debe operar de manera optima.|
+|:smile: **Secuencia normal** |Cuando se presente alguna condicion fuera de control el sistema arrojará una alerta del área en el que esta suceda.  |
+|Paso 1| Cuando la alerta sea detectada mandara un PDF informando de lo sucedido y la posible causa. |
+|Paso 2| Una vez detectado algo fuera de control se detendran operaciones dentro el area en que esta sucedio. |
+|:triangular_flag_on_post: **Post-condicion**|  Una vez resuelto el problema se hara un reboot de los sensores para que vuelvan a operar de manera optima. |
+|:running: Excepciones | Caso en donde no se pueda resolver el problema. |
+|Paso 1|Revisar de manera rigurosa sobre que esta ocacionando la falla.|
+|Paso 2|En caso de encontrar alguna solucion, remplazar por completo el sensor.|
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
-| Identificador |[RF-0  ]|
-| Nombre ||
-| Detalle | |
-| :triangular_flag_on_post: **Pre-condiciones** ||
-|:smile: **Secuencia normal** | |
-|Paso 1|  |
-|Paso 2|  |
-|Paso 3|  |
-|:triangular_flag_on_post: **Post-condicion**|   |
-|:running: Excepciones | |
-|Paso 1||
-|Paso 2||
+| Identificador |[RF-09]|
+| Nombre |Reportes de historial|
+| Detalle |Se debera generar reportes especificos de cada monitoreo que se realice, permitiendo que se puedan filtrar datos mediante fecha, hora, zona y sensor|
+| :triangular_flag_on_post: **Pre-condiciones** |Los reportes deberan estar almacenados en la base de datos del sistema|
+|:smile: **Secuencia normal** |Los reportes deberan ser generados de forma automatica y podran ser consultados por un usuario administrador |
+|Paso 1|El usuario debera seleccionar el tipo de informacion que desea consultar|
+|:triangular_flag_on_post: **Post-condicion**|Si los datos filtrados existen se desplegara la informacion solicitada por el usuario|
+|:running: Excepciones |Si la informacion que el usuario desea consultar bajo sus especificaciones no existe, el sistema envaira una alerta de que no se obtuvo exito |
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
