--- a/AnalisisAvzdo/C2.1_AbrahamRodriguez_Zeppelin.md
+++ b/AnalisisAvzdo/C2.1_AbrahamRodriguez_Zeppelin.md
@@ -198,4 +198,4 @@ Requerimientos funcionales del usuario y del sistema.
 
 </div>
 
-:house: [Ir a especificacion de requisitos](../docs/D2.0_Especificacion_requisitos_y_diseno.md)
+:house: [Ir a mi repositorio](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/AnalisisAvzdo/C2.1_AbrahamRodriguez_Zeppelin.mdd)
