--- a/AnalisisAvzdo/C2.2_AbrahamRodriguez_Zeppelin.md
+++ b/AnalisisAvzdo/C2.2_AbrahamRodriguez_Zeppelin.md
@@ -64,8 +64,8 @@ Requisitos no funcionales del sistema
 |:pencil: Requisito  | Descripción |
 |:---|:---|
 | Identificador |[RNF-02]|
-| Nombre |[Sistema Sensorial]|
-| Detalle |[El sistema debera tener compatibilidad con el sistema sensorial para poder realizar el monitoreo de humedad, temperatura e iluminacion]|
+| Nombre |[Mantenibilidad]|
+| Detalle |[El sistema cuenta con un apartado para agregar mas sensores independientemente de su usabilidad y utilidad ]|
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
@@ -76,20 +76,20 @@ Requisitos no funcionales del sistema
 |:pencil: Requisito  | Descripción |
 |:---|:---|
 | Identificador |[RNF-04]|
-| Nombre |[Sistema Adaptado]|
-| Detalle |[El sistema debera contar con compatibilidad con diferentes puntos de acceso tanto como web y movil para asi ofrecer al usuario una forma flexible de acceso]|
+| Nombre |[Funcionalidad]|
+| Detalle |[El sistema debe ser capaz de captar los registros de ambiente correctamente ya que de aqui se origina el proceso principal del desarrollo.]|
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
 | Identificador |[RNF-05]|
-| Nombre |[Funcionalidad del Sistema]|
-| Detalle |[El sistema debe ser capaz de captar y almacenar los parametros solicitados para la correcta medicion y control de las areas o espacios a monitoriear.]|
+| Nombre |[Usabilidad]|
+| Detalle |[El sistema debera contar con una interfaz la cual sea facil de interactuar para el usuario y que se cuente con un manual que sirva de guia rapida para su manipulacion.]|
 
 |:pencil: Requisito  | Descripción |
 |:---|:---|
 | Identificador |[RNF-06]|
-| Nombre |[Usabilidad]|
-| Detalle |[El sistema debera contar con una interfaz la cual sea facil de interactuar para el usuario y que se cuente con un manual que sirva de guia rapida para su manipulacion.]|
+| Nombre |[Interoperabilidad]|
+| Detalle |[El sistema debera tener la facilidad de adquirir los datos recolectados, compartir datos y posibilitar el intercambio de información y conocimiento entre ellos.]|
 </div>
 
 :house: [Ir a especificacion de requisitos](../docs/D2.0_Especificacion_requisitos_y_diseno.md)
