--- a/AnalisisAvzdo/C2.2_AbrahamRodriguez_Zeppelin.md
+++ b/AnalisisAvzdo/C2.2_AbrahamRodriguez_Zeppelin.md
@@ -92,4 +92,4 @@ Requisitos no funcionales del sistema
 | Detalle |[El sistema debera tener la facilidad de adquirir los datos recolectados, compartir datos y posibilitar el intercambio de información y conocimiento entre ellos.]|
 </div>
 
-:house: [Ir a especificacion de requisitos](../docs/D2.0_Especificacion_requisitos_y_diseno.md)
+:house: [Ir a mi repositorio](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/AnalisisAvzdo/C2.2_AbrahamRodriguez_Zeppelin.md)
