--- a/AnalisisAvzdo/C2.3_AbrahamRodriguez_Zeppelin.md
+++ b/AnalisisAvzdo/C2.3_AbrahamRodriguez_Zeppelin.md
@@ -67,4 +67,4 @@ sistema que se está diseñando?
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
 
-:cat: [Enlace a mi Github](https://github.com/Elpoke12/AnalisisAvanzado_OsmarEnrique)
+:cat: [Enlace a mi Github](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/AnalisisAvzdo/C2.3_AbrahamRodriguez_Zeppelin.md)
