--- a/AnalisisAvzdo/C2.4_AbrahamRodriguez_Zeppelin.md
+++ b/AnalisisAvzdo/C2.4_AbrahamRodriguez_Zeppelin.md
@@ -66,4 +66,4 @@ Arquitectura en capas
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
 
-:house: [Ir a especificación de requisitos](../docs/D2.0_Especificacion_requisitos_y_diseno.md)
+:house: [Ir a mi github](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/AnalisisAvzdo/C2.4_AbrahamRodriguez_Zeppelin.md)
