--- a/AnalisisAvzdo/A2.3_Patrones_de_arquitectura_de_software(1).md
+++ b/AnalisisAvzdo/A2.3_Patrones_de_arquitectura_de_software(1).md
@@ -47,23 +47,23 @@ ___
 2. Tómese como base las vistas arquitectónicas asi como los diagramas UML elaborados, para aplicar el patrón que considere el mas apropiado para cada uno de los siguientes escenarios.
    
 - 2.1 Considerando que se desea mantener y escalar el sistema, se busca desarrollar la aplicación a través de la descomposición de pequeños servicios independientes y aislados, los cuales consuman una interface externa para comunicarse a un servidor de base de datos.
-https://github.com/Elpoke12/AnalisisAvanzado_OsmarEnrique/blob/master/img/microsevicios.drawio.png?fbclid=IwAR3vslk9VCE_MZkpVod8A_K4e2mgnpk_2VSwrpvG6Wj9SVEcijdzxTo53hM
+![2.1](https://raw.githubusercontent.com/Elpoke12/AnalisisAvanzado_OsmarEnrique/master/img/micro-servicios.drawio.svg)
 
   
 - 2.2 Siendo la confidencialidad y la seguridad atributos o requerimientos para el caso de estudio, se busca estructurar cada uno de los componentes que se van a programar en grupos de sub-tareas, donde cada una de estas sub-tareas se deberá comunicar una capa intermedia y esta a otra capa superior.
-https://github.com/OscarAbrahamH/AnalisisAvanzado_Desarrollo/blob/master/img/diagrama%202.2.svg
+![2.2](https://raw.githubusercontent.com/OscarAbrahamH/AnalisisAvanzado_Desarrollo/master/img/diagrama%202.2.svg)
 
   
 - 2.3 Buscando la disponibilidad del sistema se plantea instalar dos servidores de servicios, donde estos realicen sus peticiones a un tercer servidor en el cual se almacenaría la base de datos.
-https://github.com/Mauri7755/ANALISIS-AVANZADO-DE-SOFTWAREE/blob/master/img/modelo%20de%203%20capas.svg
+![2.3](https://raw.githubusercontent.com/Mauri7755/ANALISIS-AVANZADO-DE-SOFTWAREE/master/img/modelo%20de%203%20capas.svg)
 
   
 - 2.4 Identificando que la integridad de los datos es un requisito, se plantea replicar y sincronizar la base de datos almacenada dentro del servidor principal a otro, considerando el principal como maestro y secundario como esclavo.
-https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/images/2.5_MaestroEsclavo.drawio.png
+![2.4](https://raw.githubusercontent.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/master/images/2.5_MaestroEsclavo.drawio.png)
 
 
 - 2.5 Considerando que el cliente solicito que cada vez que ocurra una falla se deberá proporcionar alarmas a los distintos usuario independiente del lugar en que se encuentren, se observa que se deberá contratar un proveedor de servicios para disparar las alarmas y estas lleguen a los usuarios requeridos.
-https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/images/2.5_diagrama.drawio.png?fbclid=IwAR1LYzRIeTgPmKd2FAxljwvMHyl7Z6w1_bFxZhuuuhhfx8v-DKXFIdBlb9w
+![2.5](https://raw.githubusercontent.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/master/images/2.5_diagrama.drawio.png)
 
 
 ___   
@@ -76,4 +76,4 @@ ___
 | Demostración  | El alumno se presenta durante la explicación de la funcionalidad de la actividad?            | 20      |
 | Conclusiones  | Se incluye una opinión personal de la actividad  por cada uno de los integrantes del equipo? | 10      |
 
-:house: [Ir a ](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/AnalisisAvzdo/A2.3_AbrahamRodriguez_Zeppelin.md)
+:cat: [Link a mi Github](https://github.com/Elpoke12/AnalisisAvanzado_OsmarEnrique)
