--- a/AnalisisAvzdo/C3.1_RodriguezAbraham_Zeppelin.md
+++ b/AnalisisAvzdo/C3.1_RodriguezAbraham_Zeppelin.md
@@ -91,4 +91,4 @@ Metodo agil Design thinking aliado al desarrollo de software
 | Instrucciones | Se cumple con cada uno de los puntos indicados dentro del apartado Instrucciones?            | 20 |
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
-:cat: [Link a mi Github](https://github.com/Elpoke12/AnalisisAvanzado_OsmarEnrique/blob/master/img/Mockup-inicio.png)
+:cat: [Link a mi Github](https://github.com/abraham22rodriguez/AnalisisAvanzadoDeSoftware_AbrahamRodriguez/blob/master/AnalisisAvzdo/C3.1_RodriguezAbraham_Zeppelin.md)
