--- a/AnalisisAvzdo/A3.1_AbrahamRodriguez_Softonic.md
+++ b/AnalisisAvzdo/A3.1_AbrahamRodriguez_Softonic.md
@@ -47,16 +47,20 @@ Diseño de arquitectura de software utilizando modelo C4
       <p> 
          <strong>Diagrama de contenedores</strong>
       </p>
-      <img alt="Clase_drawio" src="../images/nivel2.drawio.png" width=100%>
+      <img alt="Clase_drawio" src="../images/nivel2corregido.drawio.png" width=100%>
    </div>
    
    - [x] 3. Diagrama de componentes.
 ​
        <div align="center">
       <p> 
-         <strong>Diagrama de componentes</strong>
+         <strong>Diagramas de componentes</strong>
       </p>
       <img alt="Clase_drawio" src="images/../../images/DiagramaComponentes.drawio.png" width=100%>
+      <img alt="Clase_drawio" src="images/../../images/diagramaComponentes2.drawio.png" width=100%>
+      <img alt="Clase_drawio" src="images/../../images/ComponentesFirebase.drawio.png" width=100%>
+      <img alt="Clase_drawio" src="images/../../images/ComponentesMongo.drawio.png" width=100%>
+      <img alt="Clase_drawio" src="images/../../images" width=100%>
    </div>
    
    - [x] 4. Diagrama de clases
