--- a/AnalisisAvzdo/A3.1_AbrahamRodriguez_Softonic.md
+++ b/AnalisisAvzdo/A3.1_AbrahamRodriguez_Softonic.md
@@ -55,12 +55,16 @@ Diseño de arquitectura de software utilizando modelo C4
        <div align="center">
       <p> 
          <strong>Diagramas de componentes</strong>
-      </p>
+      </p>PWA Aplication
       <img alt="Clase_drawio" src="images/../../images/DiagramaComponentes.drawio.png" width=100%>
+      <br>Page Aplication
       <img alt="Clase_drawio" src="images/../../images/diagramaComponentes2.drawio.png" width=100%>
+      <br>Api FireBase
       <img alt="Clase_drawio" src="images/../../images/ComponentesFirebase.drawio.png" width=100%>
+      <br>Api MongoDB
       <img alt="Clase_drawio" src="images/../../images/ComponentesMongo.drawio.png" width=100%>
-      <img alt="Clase_drawio" src="images/../../images" width=100%>
+      <br>IOT
+      <img alt="Clase_drawio" src="images/../../images/iot.drawio.png" width=100%>
    </div>
    
    - [x] 4. Diagrama de clases
